fix: correct button alignment and button size

--- a/mystyle.css
+++ b/mystyle.css
@@ -88,7 +88,13 @@ body
 .contactitem{
 	display: flex;
 	flex-direction: column;
-	/* align-items: flex-start; */
+	
+}
+.btnalign{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	
 }
 .ininetextbox{
 	display: flex;
@@ -132,6 +138,7 @@ body
   background-color: white; 
   color: black; 
   border: 2px solid #4CAF50;
+  width: 50%;
 }
 
 .button1:hover {
